
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;


 int itoa64_to_int (int const) ;

__attribute__((used)) static void md5crypt_decode (u8 digest[16], const u8 buf[22])
{
  int l;

  l = itoa64_to_int (buf[ 0]) << 0;
  l |= itoa64_to_int (buf[ 1]) << 6;
  l |= itoa64_to_int (buf[ 2]) << 12;
  l |= itoa64_to_int (buf[ 3]) << 18;

  digest[ 0] = (l >> 16) & 0xff;
  digest[ 6] = (l >> 8) & 0xff;
  digest[12] = (l >> 0) & 0xff;

  l = itoa64_to_int (buf[ 4]) << 0;
  l |= itoa64_to_int (buf[ 5]) << 6;
  l |= itoa64_to_int (buf[ 6]) << 12;
  l |= itoa64_to_int (buf[ 7]) << 18;

  digest[ 1] = (l >> 16) & 0xff;
  digest[ 7] = (l >> 8) & 0xff;
  digest[13] = (l >> 0) & 0xff;

  l = itoa64_to_int (buf[ 8]) << 0;
  l |= itoa64_to_int (buf[ 9]) << 6;
  l |= itoa64_to_int (buf[10]) << 12;
  l |= itoa64_to_int (buf[11]) << 18;

  digest[ 2] = (l >> 16) & 0xff;
  digest[ 8] = (l >> 8) & 0xff;
  digest[14] = (l >> 0) & 0xff;

  l = itoa64_to_int (buf[12]) << 0;
  l |= itoa64_to_int (buf[13]) << 6;
  l |= itoa64_to_int (buf[14]) << 12;
  l |= itoa64_to_int (buf[15]) << 18;

  digest[ 3] = (l >> 16) & 0xff;
  digest[ 9] = (l >> 8) & 0xff;
  digest[15] = (l >> 0) & 0xff;

  l = itoa64_to_int (buf[16]) << 0;
  l |= itoa64_to_int (buf[17]) << 6;
  l |= itoa64_to_int (buf[18]) << 12;
  l |= itoa64_to_int (buf[19]) << 18;

  digest[ 4] = (l >> 16) & 0xff;
  digest[10] = (l >> 8) & 0xff;
  digest[ 5] = (l >> 0) & 0xff;

  l = itoa64_to_int (buf[20]) << 0;
  l |= itoa64_to_int (buf[21]) << 6;

  digest[11] = (l >> 0) & 0xff;
}
